[package]
name = "rten-cli"
version = "0.19.0"
edition = "2021"
authors = ["Robert Knight"]
description = "CLI tool for inspecting and running RTen models"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
fastrand = "2.0.2"
rten = { path = "../", version = "0.19.0", features=["mmap", "random"] }
rten-tensor = { path = "../rten-tensor", version = "0.19.0" }
lexopt = "0.3.0"

[dev-dependencies]
rten-testing = { path = "../rten-testing" }

[features]
# Use AVX-512 instructions if available. Requires nightly Rust for AVX-512 intrinsics.
avx512 = ["rten/avx512"]

[lints.clippy]
uninlined_format_args = "allow"

[[bin]]
name = "rten"
path = "src/main.rs"
