[package]
name = "rten-cli"
version = "0.21.0"
edition = "2024"
authors = ["Robert Knight"]
description = "CLI tool for inspecting and running RTen models"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
fastrand = "2.0.2"
rten = { path = "../", version = "0.21.0", features=["all-ops", "mmap"] }
rten-tensor = { path = "../rten-tensor", version = "0.21.0" }
lexopt = "0.3.0"
safetensors = "0.6.2"

[dev-dependencies]
rten-testing = { path = "../rten-testing" }

[lints.clippy]
uninlined_format_args = "allow"

[[bin]]
name = "rten"
path = "src/main.rs"
