[package]
name = "rten-cli"
version = "0.24.0"
edition = "2024"
authors = ["Robert Knight"]
description = "CLI tool for inspecting and running RTen models"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
argh = { workspace = true }
fastrand = { workspace = true }
rten = { path = "../", version = "0.24.0", features=["all-ops", "mmap"] }
safetensors = "0.6.2"

[dependencies.rten-tensor]
path = "../rten-tensor"
version = "0.24.0"
# rten-cli doesn't need the "serde" feature, but aligning the features with
# rten-examples avoids a rebuild of the rten crate when switching between
# building examples and building the CLI.
features = ["serde"]

[dev-dependencies]
rten-testing = { path = "../rten-testing" }

[lints.clippy]
uninlined_format_args = "allow"

[[bin]]
name = "rten"
path = "src/main.rs"
