[project]
name = "rten-convert"
description = "Convert ONNX models to .rten format"
requires-python = ">=3.10"
version = "0.15.0"
dependencies = ["flatbuffers", "onnx", "numpy"]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
rten-convert = "rten_convert.converter:main"

[project.urls]
Homepage = "https://github.com/robertknight/rten"
Issues = "https://github.com/robertknight/rten/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["rten_convert/schema_generated.py"]

[[tool.mypy.overrides]]
module = "rten_convert.schema_generated"
disable_error_code = [
  "annotation-unchecked",
  "import-untyped" # for flatbuffers
]

[[tool.mypy.overrides]]
module = "rten_convert.converter"
disable_error_code = [
  "import-untyped", # for flatbuffers
]
