[package]
name = "rten-examples"
version = "0.3.0"
edition = "2021"
authors = ["Robert Knight"]
description = "Examples for using the rten library"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"

[dependencies]
fastrand = "2.0.2"
hound = "3.5.1"
image = { workspace = true }
lexopt = "0.3.0"
png = "0.17.6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rten = { path = "../", features = ["mmap", "random"] }
rten-generate = { path = "../rten-generate", features=["text-decoder"] }
rten-imageio = { path = "../rten-imageio" }
rten-imageproc = { path = "../rten-imageproc" }
rten-tensor = { path = "../rten-tensor" }
rten-text = { path = "../rten-text" }

[features]
# Use AVX-512 instructions if available. Requires nightly Rust for AVX-512 intrinsics.
avx512 = ["rten/avx512"]

[lints.clippy]
# Allows use of `..Default::default()` for future compatibility even when not
# currently needed.
needless_update = "allow"

[package.metadata.release]
release = false

# Vision
[[bin]]
name = "deeplab"
path = "src/deeplab.rs"

[[bin]]
name = "detr"
path = "src/detr.rs"

[[bin]]
name = "distilvit"
path = "src/distilvit.rs"

[[bin]]
name = "imagenet"
path = "src/imagenet.rs"

[[bin]]
name = "yolo"
path = "src/yolo.rs"

[[bin]]
name = "depth_anything"
path = "src/depth_anything.rs"

# Text
[[bin]]
name = "bert_qa"
path = "src/bert_qa.rs"

[[bin]]
name = "gpt2"
path = "src/gpt2.rs"

[[bin]]
name = "jina_similarity"
path = "src/jina_similarity.rs"

[[bin]]
name = "qwen2_chat"
path = "src/qwen2_chat.rs"

# Audio
[[bin]]
name = "piper"
path = "src/piper.rs"

[[bin]]
name = "wav2vec2"
path = "src/wav2vec2.rs"
