[package]
name = "rten-gemm"
version = "0.21.0"
edition = "2024"
authors = ["Robert Knight"]
description = "Machine-learning oriented matrix multiplication"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"

[dependencies]
rayon = { workspace = true }
rten-base = { path = "../rten-base", version = "0.21.0" }
rten-simd = { path = "../rten-simd", version = "0.21.0" }
rten-tensor = { path = "../rten-tensor", version = "0.21.0" }

[dev-dependencies]
rten-bench = { path = "../rten-bench" }
rten-testing = { path = "../rten-testing" }

[lib]
crate-type = ["lib"]

[lints.clippy]
# Clippy frequently suggests to replace for loops with const bounds (often used
# in performance-critical loops) with iterators, which is more verbose and
# potentially less efficient.
needless_range_loop = "allow"
too_many_arguments = "allow"
uninlined_format_args = "allow"
