[package]
name = "rten-generate"
version = "0.14.0"
edition = "2021"
authors = ["Robert Knight"]
description = "Utilities to simplify running auto-regressive models with RTen"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
fastrand = { version = "2.0.2" }
rten = { path = "../", version = "0.14.0" }
rten-text = { path = "../rten-text", version = "0.14.0", optional = true }
rten-tensor = { path = "../rten-tensor", version = "0.14.0" }

[features]
# Enable text decoding using tokenizers from rten-text
text-decoder = ["dep:rten-text"]

[package.metadata.docs.rs]
features = ["text-decoder"]
