[package]
name = "rten-generate"
version = "0.24.0"
edition = "2024"
authors = ["Robert Knight"]
description = "Utilities to simplify running auto-regressive models with RTen"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
fastrand = { workspace = true }
rten = { path = "../", version = "0.24.0" }
rten-simd = { path = "../rten-simd", version = "0.24.0" }
rten-text = { path = "../rten-text", version = "0.24.0", optional = true }
rten-tensor = { path = "../rten-tensor", version = "0.24.0" }
rten-vecmath = { path = "../rten-vecmath", version = "0.24.0" }

[dev-dependencies]
rten-testing = { path = "../rten-testing" }

[features]
# Enable text decoding using tokenizers from rten-text
text-decoder = ["dep:rten-text"]

[lints.clippy]
uninlined_format_args = "allow"

[package.metadata.docs.rs]
features = ["text-decoder"]
