[package]
name = "rten-imageio"
version = "0.23.0"
edition = "2024"
authors = ["Robert Knight"]
description = "Utilities for loading images for use with RTen"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
png = "0.17.6"
rten-tensor = { path = "../rten-tensor", version = "0.23.0" }
image = { workspace = true }

[lints.clippy]
uninlined_format_args = "allow"
