[package]
name = "rten-imageproc"
version = "0.4.0"
edition = "2021"
authors = ["Robert Knight"]
description = "Image tensor processing and geometry functions"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"

[dependencies]
rten-tensor = { path = "../rten-tensor", version = "0.4.0" }

[lib]
crate-type = ["lib"]
