[package]
name = "rten-imageproc"
version = "0.7.0"
edition = "2021"
authors = ["Robert Knight"]
description = "Image tensor processing and geometry functions"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
rten-tensor = { path = "../rten-tensor", version = "0.7.0" }

[dev-dependencies]
rten-bench = { path = "../rten-bench" }

[lib]
crate-type = ["lib"]
