[package]
name = "rten-imageproc"
version = "0.19.0"
edition = "2021"
authors = ["Robert Knight"]
description = "Image tensor processing and geometry functions"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
rten-tensor = { path = "../rten-tensor", version = "0.19.0" }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
rten-bench = { path = "../rten-bench" }
rten-testing = { path = "../rten-testing" }

[lib]
crate-type = ["lib"]

[features]
# Implement serde Serialize and Deserialize traits on items where it makes sense
serde_traits = ["serde"]

[lints.clippy]
uninlined_format_args = "allow"
