[package]
name = "rten-model-file"
version = "0.21.0"
edition = "2024"
authors = ["Robert Knight"]
description = "Machine-learning oriented matrix multiplication"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"

[dependencies]
flatbuffers = "24.3.25"
rten-base = { path = "../rten-base", version = "0.21.0" }

[dev-dependencies]
rten-testing = { path = "../rten-testing" }

[lib]
crate-type = ["lib"]
