[package]
name = "rten-model-file"
version = "0.24.0"
edition = "2024"
authors = ["Robert Knight"]
description = "Machine-learning oriented matrix multiplication"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"

[dependencies]
flatbuffers = { workspace = true }
rten-base = { path = "../rten-base", version = "0.24.0" }

[dev-dependencies]
rten-testing = { path = "../rten-testing" }

[lib]
crate-type = ["lib"]
