[package]
name = "rten-onnx"
version = "0.22.1"
edition = "2024"
authors = ["Robert Knight"]
description = "ONNX model parser"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"

[lib]
crate-type = ["lib"]

[dependencies]
protozero = "0.1.7"
