[package]
name = "rten-serialize"
version = "0.1.0"
edition = "2024"
description = "Tensor serialization and deserialization library"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
default = []
npy = ["dep:npyz"]
npz = ["npy", "npyz/npz"]

[dependencies]
npyz = { version = "0.9.1", optional = true }
rten-tensor = { path = "../rten-tensor", version = "0.24.0" }
