[package]
name = "rten-serialize"
version = "0.1.0"
edition = "2024"
description = "Tensor serialization and deserialization library"
license = "MIT OR Apache-2.0"

[features]
default = []
npy = []
npz = ["npy", "dep:zip"]
# Enable reading compressed (deflate) NPZ archives, e.g. those produced by
# `numpy.savez_compressed`. Without this, only uncompressed archives are
# supported.
npz-compression = ["npz", "zip/deflate"]
safetensors = ["dep:safetensors"]

[dependencies]
rten-base = { path = "../rten-base", version = "0.24.0" }
rten-tensor = { path = "../rten-tensor", version = "0.24.0" }

# We disable default features in these crates to reduce dependencies and build
# times.
safetensors = { version = "0.8.0", default-features = false, optional = true }
zip = { version = "8.6.0", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
