[package]
name = "rten-simd"
version = "0.15.0"
edition = "2021"
authors = ["Robert Knight"]
description = "Portable SIMD for stable Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[lib]
crate-type = ["lib"]

[lints.clippy]
# See comments about `needless_range_loop` in root Cargo.toml.
needless_range_loop = "allow"
manual_memcpy = "allow"

[features]
avx512 = []
