[package]
name = "rten-testing"
version = "0.1.0"
edition = "2021"
authors = ["Robert Knight"]
description = "Testing utilities for use in RTen development"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"

[package.metadata.release]
release = false

[lib]
crate-type = ["lib"]
