[package]
name = "rten-vecmath"
version = "0.23.0"
edition = "2024"
authors = ["Robert Knight"]
description = "SIMD vectorized implementations of various math functions used in ML models"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/rten"
repository = "https://github.com/robertknight/rten"
include = ["/src", "/README.md"]

[dependencies]
rten-base = { path = "../rten-base", version = "0.23.0" }
rten-simd = { path = "../rten-simd", version = "0.23.0" }

[dev-dependencies]
fastrand = "2.0.2"
libm = "0.2.6"

[lib]
crate-type = ["lib"]

[lints.clippy]
# See comments about `needless_range_loop` in root Cargo.toml.
needless_range_loop = "allow"
manual_memcpy = "allow"
