[package]
name = "wasnn-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "1.9.0"
hound = "3.5.1"
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg", "webp"] }
lexopt = "0.3.0"
png = "0.17.6"
serde_json = "1.0.91"
wasnn = { path = "../" }
wasnn-imageio = { path = "../wasnn-imageio" }
wasnn-imageproc = { path = "../wasnn-imageproc" }
wasnn-ocr = { path = "../wasnn-ocr" }
wasnn-tensor = { path = "../wasnn-tensor" }
wasnn-text = { path = "../wasnn-text" }

[lints.clippy]
# Allows use of `..Default::default()` for future compatibility even when not
# currently needed.
needless_update = "allow"

# Vision
[[bin]]
name = "deeplab"
path = "src/deeplab.rs"

[[bin]]
name = "detr"
path = "src/detr.rs"

[[bin]]
name = "imagenet"
path = "src/imagenet.rs"

[[bin]]
name = "yolo"
path = "src/yolo.rs"

# Text
[[bin]]
name = "bert_qa"
path = "src/bert_qa.rs"

[[bin]]
name = "jina_similarity"
path = "src/jina_similarity.rs"

# Audio
[[bin]]
name = "wav2vec2"
path = "src/wav2vec2.rs"
