[package]
name = "wasnn-text"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
unicode_categories = "0.1.1"
unicode-normalization = "0.1.22"
fancy-regex = { version = "0.12.0", default-features = false, features = ["std", "unicode"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
